--- a/data/project.json
+++ b/data/project.json
@@ -1,21 +1,27 @@
 {
-  "users": [],
   "publish": {
-    "publishPagesApp": false,
-    "publishSHA": "",
-    "publishISODate": ""
+    "publish_pages_app": true,
+    "publish_sha": "",
+    "publish_iso_date": ""
   },
+  "users": [],
   "project": {
-    "title": "Zora Neale Hurston’s Works Progress Administration Recordings",
-    "description": "",
-    "language": "",
-    "slug": "",
-    "authors": "",
-    "mediaPlayer": "universal",
-    "autoPopulateHomePage": "true",
-    "additionalUsers": [],
-    "": {},
-    "createdAt": "",
-    "updatedAt": ""
+    "github_org": "TawandaMulalu",
+    "is_private": false,
+    "title": "Wole Soyinka, 'The Man Died' and the Aural Performance of Memory",
+    "description": "I’m interested in tracking the differences—between the written and the spoken word—in how Wole Soyinka narrates his memories of being imprisoned during the Biafran War in 1966. // What particular affordances does the aural experience of this narrative present to the listener that the written experience cannot? // What are the stakes of narration where ‘nation language’ can be heard explicitly versus implicitly, and how does this impact audience reception, or who Soyinka’s imagined audience might be? // What to make of Soyinka’s calm, considered retelling of his story (decades later) in the spoken versus written word: affective privacy or sublimated trauma or…? //",
+    "language": "en",
+    "slug": "SoyinkaCloseListening",
+    "creator": "TawandaMulalu",
+    "authors": "Tawanda Mulalu",
+    "media_player": "avannotate",
+    "auto_populate_home_page": true,
+    "additional_users": [],
+    "tags": {
+      "tagGroups": [],
+      "tags": []
+    },
+    "created_at": "2025-04-23T12:56:16.459Z",
+    "updated_at": "2025-04-23T12:56:16.459Z"
   }
 }
