--- a/data/project.json
+++ b/data/project.json
@@ -4,7 +4,13 @@
     "publish_sha": "",
     "publish_iso_date": ""
   },
-  "users": [],
+  "users": [
+    {
+      "login_name": "TawandaMulalu",
+      "avatar_url": "https://avatars.githubusercontent.com/u/205994668?v=4",
+      "admin": true
+    }
+  ],
   "project": {
     "github_org": "TawandaMulalu",
     "is_private": false,
@@ -22,6 +28,26 @@
       "tags": []
     },
     "created_at": "2025-04-23T12:56:16.459Z",
-    "updated_at": "2025-04-23T12:56:16.459Z"
-  }
+    "updated_at": "2025-04-23T12:56:16.459Z",
+    "generate_pages_site": true
+  },
+  "annotations": {},
+  "events": {},
+  "pages": {
+    "2f1e171b-343f-474e-b7d5-5f15ccfa2d07": {
+      "content": [],
+      "created_at": "2025-04-23T12:56:16.462Z",
+      "created_by": "TawandaMulalu",
+      "title": "Wole Soyinka, 'The Man Died' and the Aural Performance of Memory",
+      "updated_at": "2025-04-23T12:56:16.462Z",
+      "updated_by": "TawandaMulalu",
+      "autogenerate": {
+        "enabled": true,
+        "type": "home"
+      }
+    }
+  },
+  "pageOrder": [
+    "2f1e171b-343f-474e-b7d5-5f15ccfa2d07"
+  ]
 }
